# samcl

./: .gitignore  README.md  pyproject.toml  requirements.txt
open_clip-main/: pyproject.toml  requirements-training.txt
open_clip-main/scripts/: slurm_cc3m_semantic.SBATCH  slurm_coco_debug_A_random_baseline.SBATCH  slurm_coco_debug_B_semantic_gradnorm.SBATCH  slurm_coco_semantic.SBATCH  slurm_download_cc3m_hf.SBATCH  slurm_download_cc3m_single_shard.SBATCH  slurm_prep_semantic_wds_cache.SBATCH  slurm_prep_semantic_wds_cache_gpu.SBATCH
open_clip-main/src/open_clip_train/: data_semantic.py  four_afc_eval.py  main.py  params.py  prep_semantic_cache.py  samcl_retrieval_eval.py  scheduler.py  train.py
scripts/: interact.SBATCH  plot_teacher_similarity.py  prepare_coco2017.py  semantic_ablation.SBATCH  slurm_cc3m_text_image_only.SBATCH  slurm_cmp_textonly_similar_vs_iid_manyseeds.SBATCH  slurm_continuum.SBATCH  slurm_prep_cc3m_student_teacher_cache.SBATCH  slurm_saycam_text_image_only.SBATCH  slurm_saycam_text_image_only_cvcl_model.SBATCH  slurm_saycam_text_image_only_cvclvision_hftext_8exp.SBATCH  slurm_text_image_only.SBATCH  slurm_text_image_only_same_model.SBATCH  slurm_text_image_only_siglip.SBATCH  slurm_train_samcl.SBATCH  visualize_teacher_thresholds.py
src/samcl/: train.py
src/samcl/data/: __init__.py  coco_pairs.py  collate.py  cvcl_vocab.py  saycam_pairs.py  wds_pairs.py
src/samcl/eval/: __init__.py  four_afc.py  retrieval.py
src/samcl/losses/: __init__.py  clip_infonce.py  siglip_pairwise.py
src/samcl/utils/: device.py  (+4 more)
viz_thresholds/: report.html
(+28 files in other folders)
