[project]
name = "samcl"
version = "0.1.0"
description = "Minimal research framework for semantic-aware sampling in multimodal contrastive learning (CLIP-style)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
